pymtl3/dsl/firrtl/FIRRTLParser.py
# Generated from FIRRTL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class FIRRTLParser ( Parser ):

    grammarFileName = "FIRRTL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'circuit'", "':'", "'module'", "'extmodule'", 
                     "'input'", "'output'", "'UInt'", "'<'", "'>'", "'SInt'", 
                     "'Fixed'", "'Clock'", "'AsyncReset'", "'Reset'", "'Analog'", 
                     "'{'", "'}'", "'['", "']'", "'flip'", "'defname'", 
                     "'='", "'parameter'", "'reset'", "'=>'", "'('", "')'", 
                     "'wire'", "'reg'", "'with'", "'mem'", "'cmem'", "'smem'", 
                     "'mport'", "'inst'", "'of'", "'node'", "'<='", "'<-'", 
                     "'is'", "'invalid'", "'stop('", "'printf('", "'skip'", 
                     "'attach'", "'data-type'", "'depth'", "'read-latency'", 
                     "'write-latency'", "'read-under-write'", "'reader'", 
                     "'writer'", "'readwriter'", "'when'", "'else'", "'infer'", 
                     "'read'", "'write'", "'rdwr'", "'old'", "'new'", "'undefined'", 
                     "'.'", "'mux('", "'validif('", "'stop'", "'printf'", 
                     "'mux'", "'validif'", "'add('", "'sub('", "'mul('", 
                     "'div('", "'rem('", "'lt('", "'leq('", "'gt('", "'geq('", 
                     "'eq('", "'neq('", "'pad('", "'asUInt('", "'asAsyncReset('", 
                     "'asSInt('", "'asClock('", "'shl('", "'shr('", "'dshl('", 
                     "'dshr('", "'cvt('", "'neg('", "'not('", "'and('", 
                     "'or('", "'xor('", "'andr('", "'orr('", "'xorr('", 
                     "'cat('", "'bits('", "'head('", "'tail('", "'asFixedPoint('", 
                     "'bpshl('", "'bpshr('", "'bpset('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "UnsignedInt", 
                      "SignedInt", "HexLit", "DoubleLit", "StringLit", "RawString", 
                      "FileInfo", "Id", "RelaxedId", "SKIP_", "NEWLINE", 
                      "INDENT", "DEDENT" ]

    RULE_circuit = 0
    RULE_module = 1
    RULE_port = 2
    RULE_direction = 3
    RULE_typetype = 4
    RULE_field = 5
    RULE_defname = 6
    RULE_parameter = 7
    RULE_moduleBlock = 8
    RULE_simple_reset0 = 9
    RULE_simple_reset = 10
    RULE_reset_block = 11
    RULE_stmt = 12
    RULE_memField = 13
    RULE_simple_stmt = 14
    RULE_suite = 15
    RULE_when = 16
    RULE_info = 17
    RULE_mdir = 18
    RULE_ruw = 19
    RULE_exp = 20
    RULE_idid = 21
    RULE_fieldId = 22
    RULE_intLit = 23
    RULE_keywordAsId = 24
    RULE_primop = 25

    ruleNames =  [ "circuit", "module", "port", "direction", "typetype", 
                   "field", "defname", "parameter", "moduleBlock", "simple_reset0", 
                   "simple_reset", "reset_block", "stmt", "memField", "simple_stmt", 
                   "suite", "when", "info", "mdir", "ruw", "exp", "idid", 
                   "fieldId", "intLit", "keywordAsId", "primop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    UnsignedInt=107
    SignedInt=108
    HexLit=109
    DoubleLit=110
    StringLit=111
    RawString=112
    FileInfo=113
    Id=114
    RelaxedId=115
    SKIP_=116
    NEWLINE=117
    INDENT=118
    DEDENT=119

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CircuitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idid(self):
            return self.getTypedRuleContext(FIRRTLParser.IdidContext,0)


        def INDENT(self):
            return self.getToken(FIRRTLParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(FIRRTLParser.DEDENT, 0)

        def info(self):
            return self.getTypedRuleContext(FIRRTLParser.InfoContext,0)


        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FIRRTLParser.ModuleContext)
            else:
                return self.getTypedRuleContext(FIRRTLParser.ModuleContext,i)


        def getRuleIndex(self):
            return FIRRTLParser.RULE_circuit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircuit" ):
                listener.enterCircuit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircuit" ):
                listener.exitCircuit(self)




    def circuit(self):

        localctx = FIRRTLParser.CircuitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_circuit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(FIRRTLParser.T__0)
            self.state = 53
            self.idid()
            self.state = 54
            self.match(FIRRTLParser.T__1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FIRRTLParser.FileInfo:
                self.state = 55
                self.info()


            self.state = 58
            self.match(FIRRTLParser.INDENT)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FIRRTLParser.T__2 or _la==FIRRTLParser.T__3:
                self.state = 59
                self.module()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(FIRRTLParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idid(self):
            return self.getTypedRuleContext(FIRRTLParser.IdidContext,0)


        def INDENT(self):
            return self.getToken(FIRRTLParser.INDENT, 0)

        def moduleBlock(self):
            return self.getTypedRuleContext(FIRRTLParser.ModuleBlockContext,0)


        def DEDENT(self):
            return self.getToken(FIRRTLParser.DEDENT, 0)

        def info(self):
            return self.getTypedRuleContext(FIRRTLParser.InfoContext,0)


        def port(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FIRRTLParser.PortContext)
            else:
                return self.getTypedRuleContext(FIRRTLParser.PortContext,i)


        def defname(self):
            return self.getTypedRuleContext(FIRRTLParser.DefnameContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FIRRTLParser.ParameterContext)
            else:
                return self.getTypedRuleContext(FIRRTLParser.ParameterContext,i)


        def getRuleIndex(self):
            return FIRRTLParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = FIRRTLParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FIRRTLParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(FIRRTLParser.T__2)
                self.state = 68
                self.idid()
                self.state = 69
                self.match(FIRRTLParser.T__1)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FIRRTLParser.FileInfo:
                    self.state = 70
                    self.info()


                self.state = 73
                self.match(FIRRTLParser.INDENT)
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 74
                        self.port() 
                    self.state = 79
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 80
                self.moduleBlock()
                self.state = 81
                self.match(FIRRTLParser.DEDENT)
                pass
            elif token in [FIRRTLParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(FIRRTLParser.T__3)
                self.state = 84
                self.idid()
                self.state = 85
                self.match(FIRRTLParser.T__1)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FIRRTLParser.FileInfo:
                    self.state = 86
                    self.info()


                self.state = 89
                self.match(FIRRTLParser.INDENT)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FIRRTLParser.T__4 or _la==FIRRTLParser.T__5:
                    self.state = 90
                    self.port()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FIRRTLParser.T__20:
                    self.state = 96
                    self.defname()


                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FIRRTLParser.T__22:
                    self.state = 99
                    self.parameter()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 105
                self.match(FIRRTLParser.DEDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PortContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(FIRRTLParser.DirectionContext,0)


        def idid(self):
            return self.getTypedRuleContext(FIRRTLParser.IdidContext,0)


        def typetype(self):
            return self.getTypedRuleContext(FIRRTLParser.TypetypeContext,0)


        def NEWLINE(self):
            return self.getToken(FIRRTLParser.NEWLINE, 0)

        def info(self):
            return self.getTypedRuleContext(FIRRTLParser.InfoContext,0)


        def getRuleIndex(self):
            return FIRRTLParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = FIRRTLParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_port)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.direction()
            self.state = 110
            self.idid()
            self.state = 111
            self.match(FIRRTLParser.T__1)
            self.state = 112
            self.typetype(0)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FIRRTLParser.FileInfo:
                self.state = 113
                self.info()


            self.state = 116
            self.match(FIRRTLParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FIRRTLParser.RULE_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirection" ):
                listener.enterDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirection" ):
                listener.exitDirection(self)




    def direction(self):

        localctx = FIRRTLParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==FIRRTLParser.T__4 or _la==FIRRTLParser.T__5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intLit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FIRRTLParser.IntLitContext)
            else:
                return self.getTypedRuleContext(FIRRTLParser.IntLitContext,i)


        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FIRRTLParser.FieldContext)
            else:
                return self.getTypedRuleContext(FIRRTLParser.FieldContext,i)


        def typetype(self):
            return self.getTypedRuleContext(FIRRTLParser.TypetypeContext,0)


        def getRuleIndex(self):
            return FIRRTLParser.RULE_typetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypetype" ):
                listener.enterTypetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypetype" ):
                listener.exitTypetype(self)



    def typetype(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FIRRTLParser.TypetypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_typetype, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FIRRTLParser.T__6]:
                self.state = 121
                self.match(FIRRTLParser.T__6)
                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.match(FIRRTLParser.T__7)
                    self.state = 123
                    self.intLit()
                    self.state = 124
                    self.match(FIRRTLParser.T__8)


                pass
            elif token in [FIRRTLParser.T__9]:
                self.state = 128
                self.match(FIRRTLParser.T__9)
                self.state = 133
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 129
                    self.match(FIRRTLParser.T__7)
                    self.state = 130
                    self.intLit()
                    self.state = 131
                    self.match(FIRRTLParser.T__8)


                pass
            elif token in [FIRRTLParser.T__10]:
                self.state = 135
                self.match(FIRRTLParser.T__10)
                self.state = 140
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 136
                    self.match(FIRRTLParser.T__7)
                    self.state = 137
                    self.intLit()
                    self.state = 138
                    self.match(FIRRTLParser.T__8)


                self.state = 148
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 142
                    self.match(FIRRTLParser.T__7)
                    self.state = 143
                    self.match(FIRRTLParser.T__7)
                    self.state = 144
                    self.intLit()
                    self.state = 145
                    self.match(FIRRTLParser.T__8)
                    self.state = 146
                    self.match(FIRRTLParser.T__8)


                pass
            elif token in [FIRRTLParser.T__11]:
                self.state = 150
                self.match(FIRRTLParser.T__11)
                pass
            elif token in [FIRRTLParser.T__12]:
                self.state = 151
                self.match(FIRRTLParser.T__12)
                pass
            elif token in [FIRRTLParser.T__13]:
                self.state = 152
                self.match(FIRRTLParser.T__13)
                pass
            elif token in [FIRRTLParser.T__14]:
                self.state = 153
                self.match(FIRRTLParser.T__14)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.match(FIRRTLParser.T__7)
                    self.state = 155
                    self.intLit()
                    self.state = 156
                    self.match(FIRRTLParser.T__8)

